<resources>
    <string name="app_name">My Application</string>
    <string name="enter_text">Enter text here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_editing_names_str">Calculate Shifts</string>
    <string name="title_activity_calculate_shifts">CalculateShiftsActivity</string>
    <string name="spinner_header">Number of watchers</string>
    <string name="post_description_header">Post</string>
    <string name="choose_posts_description">What types of posts do you have, and how many watchers do each require?</string>
    <string name="continue_str">Continue</string>
    <string name="welcoming_str">Welcome to Night Watchers App!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="enter_name">Name</string>

    <string name="registration_title">REGISTRATION</string>
    <string name="registration_description">Please fill all the fields</string>
    <string name="make_shifts_btn_text">Make Shifts</string>
    <string name="my_groups_btn_text">My Groups</string>
    <string name="groups_layout_heading">Your groups</string>
    <string name="group_button_text">Add Group</string>

    <string name="groups_title">My Groups</string>
    <string name="groups_description">See or manage your groups of watches.</string>
</resources>